--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="form-group">
                             <label for="registerMail">Mail</label>
-                            <input type="email" name="mail" id="registerMail" class="form-control" ngModel>
+                            <input type="email" name="mail" id="registerMail" class="form-control" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" ngModel>
                         </div>
                         <div class="form-group">
                                 <label for="registerNumber">Phone Number</label>
